--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
     <div class="container">
 
-        <div class="slider">
-            <div class="meme"><img src="" alt=""></div>
-            <div class="meme"><img src="" alt=""></div>
-            <div class="meme"><img src="" alt=""></div>
-            <div class="meme"><img src="" alt=""></div>
-        </div>
+        
+            <div class="slider">
+                <img src="images/meme1.jpg" alt="">
+                <img src="images/meme2.jpg" alt="">
+                <img src="images/meme3.jpg" alt="">
+                <img src="images/meme4.jpg" alt="">
+            </div>
+
 
         <div class="bottom-side">
 
