fix: bugs in header (Mon, 12.09.2023 08:46 PM)

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 </div>
                 <div class="nav-background"></div>
     
-                <p id="t1" class="text">&nbsp;Now I know what it actually looks like...&nbsp;</p>
-                <p id="t2" class="text">&nbsp;Yas, in the fall, everyone knows what my hobby is...&nbsp;</p>
-                <p id="t3" class="text">&nbsp;That's me at 2 AM when my code isn't working&nbsp;</p>
-                <p id="t4" class="text">&nbsp;Me looking at programming memes&nbsp;</p>
+                <p id="t1" class="text">Now I know what it actually looks like...</p>
+                <p id="t2" class="text">Yas, in the fall, everyone knows what my hobby is...</p>
+                <p id="t3" class="text">That's me at 2 AM when my code isn't working</p>
+                <p id="t4" class="text">Me looking at programming memes</p>
     
                 <label id="l1" for="b1"><div class="nav"></div></label>
                 <label id="l2" for="b2"><div class="nav"></div></label>
