--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div class="container">
         <div class="header" style="display: flex;">
             <h1 style="font-family: Arial, Helvetica, sans-serif; color: #FFFFFF;">Css Meme Slider</h1>
-            <h5>Yes, it really looks like an old grandmother's TV, where you can switch channels by flipping through a slider. There's also a VHS tape inserted into the player with some inscription...</h5>
+            <!-- <h5>Yes, it really looks like an old grandmother's TV, where you can switch channels by flipping through a slider. There's also a VHS tape inserted into the player with some inscription...</h5> -->
+            <h5>Oops, the wrong link was submitted. Here's the correct one: <a href="https://github.com/Matrui/cssMemeSlider/pull/1" target="_blank">https://github.com/Matrui/cssMemeSlider/pull/1</a></h5>
         </div>
         <div class="slider-wrapper">
             <div class="slider-box">
